# docmancer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  docmancer.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docmancer/: __init__.py  __main__.py  agent.py  async_agent.py  client.py  context.py
docmancer/bench/: __init__.py  cli.py  corpora.py  dataset.py  judge.py  llm_providers.py  metrics.py  question_gen.py  report.py  runner.py
docmancer/cli/: __main__.py  commands.py  eval_commands.py  help.py  mcp_commands.py  obsidian_commands.py  setup.py  ui.py  vault_commands.py
docmancer/core/: auth.py  chunking.py  config.py  html_utils.py  models.py  registry_client.py  registry_errors.py  registry_models.py  sqlite_store.py
docmancer/eval/: dataset.py  judge.py  metrics.py  report.py  runner.py  training.py
docmancer/mcp/: __init__.py  agent_config.py  credentials.py  dispatcher.py  doctor.py  idempotency.py  installer.py  logging.py  manifest.py  paths.py  registry.py  safety.py  search.py  serve.py  slug.py
docmancer/telemetry/: langfuse_sink.py  tracer.py
docmancer/templates/: claude_code_skill.md  claude_desktop_skill.md  copilot_instructions.md  cursor_agents_md.md  skill.md
docmancer/vault/: composition.py  discovery.py  (+14 more)
scripts/: live_cli_integration.sh  live_vault_integration.sh  mcp_stdio_smoke.py  smoke_test.sh
tests/: test_agent.py  test_async_agent.py  test_auto_detection.py  test_browser.py  test_chunking.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_crawl4ai_fetcher.py  test_cross_vault.py  test_detection.py  test_discovery.py  test_embeddings_fastembed.py  test_eval_judge.py  test_eval_metrics.py  test_eval_pipeline.py  test_eval_training.py  test_eval_vault_integration.py  test_extraction.py  test_fetcher_arxiv.py  test_fetcher_gitbook.py  test_fetcher_github.py  test_fetcher_mintlify.py  test_filtering.py  test_freshness.py  test_html_utils.py  test_install_cmd.py  test_install_mcp_handshake.py  test_langfuse_sink.py  test_llm_provider.py  test_mcp_agent_config.py  test_mcp_cli.py  test_mcp_credentials.py  test_mcp_dispatcher.py  test_mcp_doctor.py  test_mcp_executor_extras.py  test_mcp_idempotency.py  test_mcp_installer.py  test_mcp_log_append.py  (+39 more)
wiki/: Architecture.md  Commands.md  Configuration.md  Cross-Vault-Workflows.md  Evals-and-Observability.md  Home.md  Install-Targets.md  Supported-Sources.md  Troubleshooting.md  Vault-Intelligence.md  Vaults.md
(+63 files in other folders)
