[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "docmancer"
dynamic = ["version"]
description = "Fetch docs, embed locally, expose to AI agents via skills."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.1",
    "qdrant-client>=1.10.0",
    "fastembed>=0.6.0",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "filelock>=3.0.0",
    "trafilatura>=2.0.0",
    "markdownify>=0.13.0",
    "w3lib>=2.0.0",
    "ultimate-sitemap-parser>=0.12",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
llm = ["anthropic>=0.40.0"]
langfuse = ["langfuse>=2.0.0"]
ragas = ["ragas>=0.2.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
"docmancer" = "docmancer.cli.__main__:cli"

[tool.hatch.version]
path = "docmancer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["docmancer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
