[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "docmancer"
dynamic = ["version"]
description = "Compress local documentation context for coding agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "filelock>=3.0.0",
    "trafilatura>=2.0.0",
    "markdownify>=0.13.0",
    "w3lib>=2.0.0",
    "ultimate-sitemap-parser>=0.12",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
crawl4ai = ["crawl4ai>=0.4.0"]
# Canonical name for the LLM-as-judge extra used by `docmancer bench`.
judge = ["ragas>=0.2.0"]
# Deprecated alias for `judge`. Kept for one release; will be removed in the next minor.
ragas = ["ragas>=0.2.0"]
# Experimental vector backend for `docmancer bench`.
vector = ["qdrant-client>=1.7.0", "fastembed>=0.2.0"]
# Experimental RLM backend for `docmancer bench`.
rlm = ["rlm>=0.1.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
"docmancer" = "docmancer.cli.__main__:cli"

[tool.hatch.version]
path = "docmancer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["docmancer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
